// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 0 expenses 1`] = `
<div>
  <h2>
    Viewing 
    0
     
    expenses
     totalling 
    $0.00
  </h2>
</div>
`;

exports[`should render ExpensesSummary with 1 expense and total amount $94.34 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $94.34
  </h2>
</div>
`;

exports[`should render ExpensesSummary with 2 expenses and total amount $94.34 1`] = `
<div>
  <h2>
    Viewing 
    2
     
    expenses
     totalling 
    $94.34
  </h2>
</div>
`;
